wrap issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 
 .input {
+  display: inline-block;
   font-size: 24px;
   width: 100%;
   height: 100%;
@@ -17,6 +18,7 @@
   border: none;
   padding: 2px 4px;
   background: transparent;
+  overflow-wrap: break-word;
 }
 
 .overlay {
